--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "luxon": "^1.27.0",
+    "path": "^0.12.7",
+    "winston": "^3.3.3"
   }
 }
