--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.1'
+version: "3.1"
 
 services:
   db:
     image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: team8password
+      MYSQL_DATABASE: team8database
     ports:
       - 5000:3306
+    cap_add:
+      - SYS_NICE
