--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^1.27.0",
+    "mysql2": "^2.2.5",
     "path": "^0.12.7",
+    "sequelize": "^6.6.5",
     "winston": "^3.3.3"
   }
 }
