--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "flat": "^5.0.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.27.0",
