--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,3 +13,12 @@ services:
       - 5000:3306
     cap_add:
       - SYS_NICE
+
+  server:
+    build: ../server
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      - NODE_ENV=Docker
