--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,11 +14,11 @@ services:
     cap_add:
       - SYS_NICE
 
-  server:
-    build: ../
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-    environment:
-      - NODE_ENV=Docker
+  # server:
+  #   build: ../
+  #   ports:
+  #     - "8081:8080"
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     - NODE_ENV=Docker
