--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "flat": "^5.0.2",
     "helmet": "^4.6.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.27.0",
     "mysql2": "^2.2.5",
