Added README, and added route to get my blogs

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 # .env
+
 TZ = "Africa/Johannesburg"
-JWT_SECRET = "BBD_TEAM8_SECURITY"
+JWT_SECRET = "djdabgGHGH88787hbhj"
+DB_ACCESS_NAME="team8database"
+DB_ACCESS_USER="root"
+DB_ACCESS_PASSWORD="team8password"
